[tool.poetry]
name = "polarcle"
version = "0.1.6"
description = "Polars Dataframe integration with Oracle"
authors = ["iwolf <isaacwolfsite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "1.7.1"
asyncache = "^0.3.1"
oracledb = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
