[project]
name = "polarcle"
version = "0.1.7"
description = "Polars Dataframe integration with Oracle"
authors = [{ name = "iwolf <isaacwolfsite@gmail.com>" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["polars", "asyncache", "oracledb"]


[tool.uv]
dev-dependencies = ["ruff"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
